force-app/main/default/objects/Tenant_Lease_Association__c/Tenant_Lease_Association__c.object-meta.xml
<CustomObject>
    <description>To associate leases with tenants</description>
    <label>Tenant Lease Association</label>
    <nameField>
        <displayFormat>TLA-{0000}</displayFormat>
        <label>Tenant Lease Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenant Lease Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>