force-app/main/default/objects/Tenant_Lease_Association__c/fields/Is_Primary_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Tenant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Tenant</label>
    <type>Checkbox</type>
</CustomField>