force-app/main/default/objects/Tenant_Lease_Association__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipLabel>Tenant Lease Associations</relationshipLabel>
    <relationshipName>Tenant_Lease_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>