force-app/main/default/objects/Tenant_Lease_Association__c/fields/Occupant_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Type__c</fullName>
    <label>Occupant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Co-Tenant</fullName>
            </value>
            <value>
                <fullName>Occupant</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>