force-app/main/default/objects/Tenant_Lease_Association__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Tenant Lease Associations</relationshipLabel>
    <relationshipName>Tenant_Lease_Associations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>